Fixed so that navbar is overlapping top content on every page
This is according to the design guidelines

--- a/assets/sass/modules/_header.scss
+++ b/assets/sass/modules/_header.scss
@@ -1,6 +1,8 @@
 .header {
   padding: 0.5em 0;
-  background-color: #222531;
+  background-color: rgba(0,0,0,0);
+  position: absolute;
+  z-index: 1000000;
   display: inline-block;
   width: 100%;
   margin-bottom: -7px;
